crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.todo-preserve-memo-deps-mixed-optional-nonoptional-property-chain/error.txt
Found 1 error:

Compilation Skipped: Existing memoization could not be preserved

React Compiler has skipped optimizing this component because the existing manual memoization could not be preserved. The inferred dependencies did not match the manually specified dependencies, which could cause the value to change more or less frequently than expected. The inferred dependency was `x.a.b?.c`, but the source dependencies were [x.a.b?.c.d?.e]. Inferred less specific property than source.

error.todo-preserve-memo-deps-mixed-optional-nonoptional-property-chain.ts:7:25
   5 |
   6 | function Component({x}) {
>  7 |   const object = useMemo(() => {
     |                          ^^^^^^^
>  8 |     return identity({
     | ^^^^^^^^^^^^^^^^^^^^^
>  9 |       callback: () => {
     …
     | ^^^^^^^^^^^^^^^^^^^^^
> 17 |     });
     | ^^^^^^^^^^^^^^^^^^^^^
> 18 |   }, [x.a.b?.c.d?.e]);
     | ^^^^ Could not preserve existing manual memoization
  19 |   const result = useMemo(() => {
  20 |     return [object.callback()];
  21 |   }, [object]);
